--- a/WebDriverCodingTest/test-output/old/Default suite/classes.html
+++ b/WebDriverCodingTest/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testListingCountDP</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testListingCount</td>
 <td>&nbsp;</td></tr>
 <tr>
