--- a/WebDriverCodingTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/WebDriverCodingTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 18:19:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EbayTest.initialize()[pri:0, instance:com.test.EbayTest@4de8b406]">&gt;&gt;initialize</td> 
+<tr bgcolor="b6a4a7">  <td>16/08/03 18:25:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EbayTest.initialize()[pri:0, instance:com.test.EbayTest@4de8b406]">&gt;&gt;initialize</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 18:20:11</td>   <td>12424</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EbayTest.tearDown()[pri:0, instance:com.test.EbayTest@4de8b406]">&lt;&lt;tearDown</td> 
+<tr bgcolor="b6a4a7">  <td>16/08/03 18:25:32</td>   <td>20346</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EbayTest.tearDown()[pri:0, instance:com.test.EbayTest@4de8b406]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 18:20:09</td>   <td>10655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testCategory()[pri:0, instance:com.test.EbayTest@4de8b406]">testCategory</td> 
+<tr bgcolor="b6a4a7">  <td>16/08/03 18:25:20</td>   <td>8196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testCategory()[pri:0, instance:com.test.EbayTest@4de8b406]">testCategory</td> 
+  <td>main@1734853116</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/03 18:25:23</td>   <td>11345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCount()[pri:0, instance:com.test.EbayTest@4de8b406]">testListingCount</td> 
   <td>main@1734853116</td>   <td></td> </tr>
 </table>
