Added testcase for rightstart.com

--- a/WebDriverCodingTest/test-output/old/Suite/methods-alphabetical.html
+++ b/WebDriverCodingTest/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 17:49:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EbayTest.initialize()[pri:0, instance:com.test.EbayTest@4de8b406]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 17:49:20</td>   <td>11874</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EbayTest.tearDown()[pri:0, instance:com.test.EbayTest@4de8b406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 17:49:20</td>   <td>11653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testCategory()[pri:0, instance:com.test.EbayTest@4de8b406]">testCategory</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:50:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EbayTest.initialize()[pri:0, instance:com.test.EbayTest@3c756e4d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="9bad6f">  <td>16/08/04 08:51:04</td>   <td>38032</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RightStartTest.initialize()[pri:0, instance:com.test.RightStartTest@7c0e2abd]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="9bad6f">  <td>16/08/04 08:51:13</td>   <td>46670</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RightStartTest.quitpage()[pri:0, instance:com.test.RightStartTest@7c0e2abd]">&lt;&lt;quitpage</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:51:04</td>   <td>37830</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EbayTest.tearDown()[pri:0, instance:com.test.EbayTest@3c756e4d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:50:39</td>   <td>12432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testCategory()[pri:0, instance:com.test.EbayTest@3c756e4d]">testCategory</td> 
+  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:50:39</td>   <td>12636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@3c756e4d]">testListingCountDP</td> 
+  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:50:50</td>   <td>23884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@3c756e4d]">testListingCountDP</td> 
+  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:50:58</td>   <td>32040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@3c756e4d]">testListingCountDP</td> 
+  <td>main@201556483</td>   <td></td> </tr>
+<tr bgcolor="9bad6f">  <td>16/08/04 08:51:10</td>   <td>43492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RightStartTest.testThermometer()[pri:0, instance:com.test.RightStartTest@7c0e2abd]">testThermometer</td> 
+  <td>main@201556483</td>   <td></td> </tr>
 </table>
