--- a/WebDriverCodingTest/test-output/old/Default suite/classes.html
+++ b/WebDriverCodingTest/test-output/old/Default suite/classes.html
@@ -4,22 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.EbayTest</td>
+<td>com.test.RightStartTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testCategory</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testListingCountDP</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testListingCount</td>
+<td>testThermometer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -39,6 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>quitpage</td>
 <td>&nbsp;</td></tr>
 </table>
