--- a/WebDriverCodingTest/test-output/old/Default suite/methods.html
+++ b/WebDriverCodingTest/test-output/old/Default suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 18:59:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EbayTest.initialize()[pri:0, instance:com.test.EbayTest@4de8b406]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:08</td>   <td>11178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testCategory()[pri:0, instance:com.test.EbayTest@4de8b406]">testCategory</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:09</td>   <td>11357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCount()[pri:0, instance:com.test.EbayTest@4de8b406]">testListingCount</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:19</td>   <td>22139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@4de8b406]">testListingCountDP</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:28</td>   <td>30902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@4de8b406]">testListingCountDP</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:36</td>   <td>39320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EbayTest.testListingCountDP(java.lang.String)[pri:0, instance:com.test.EbayTest@4de8b406]">testListingCountDP</td> 
-  <td>main@1734853116</td>   <td></td> </tr>
-<tr bgcolor="b6a4a7">  <td>16/08/03 19:00:49</td>   <td>51918</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EbayTest.tearDown()[pri:0, instance:com.test.EbayTest@4de8b406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734853116</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:48:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RightStartTest.initialize()[pri:0, instance:com.test.RightStartTest@1efbd816]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1917513796</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:48:38</td>   <td>7017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RightStartTest.testThermometer()[pri:0, instance:com.test.RightStartTest@1efbd816]">testThermometer</td> 
+  <td>main@1917513796</td>   <td></td> </tr>
+<tr bgcolor="b6a4a7">  <td>16/08/04 08:48:48</td>   <td>17083</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RightStartTest.quitpage()[pri:0, instance:com.test.RightStartTest@1efbd816]">&lt;&lt;quitpage</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1917513796</td>   <td></td> </tr>
 </table>
