--- a/WebDriverCodingTest/test-output/old/Suite/classes.html
+++ b/WebDriverCodingTest/test-output/old/Suite/classes.html
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testListingCount</td>
+<td>testListingCountDP</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -36,5 +36,35 @@
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.test.RightStartTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testThermometer</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>initialize</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>quitpage</td>
 <td>&nbsp;</td></tr>
 </table>
